k8s/api-service/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devteam-1

---

apiVersion: v1
kind: Namespace
metadata:
  name: devteam-2
